=== master

* Setup validation of minimum and maximum values for integer columns in auto_validations (jeremyevans)

* Add validates_max_value and validates_min_value to validation_helpers (jeremyevans)

* Include :min_value and :max_value schema entries for integer columns on most databases (jeremyevans)

* Don't wrap multi-inserts in a transaction when it's not required (shannoncole, jeremyevans) (#1945)

* Update mock PostgreSQL adapter to default to PostgreSQL 15 instead of PostgreSQL 14 (jeremyevans)

* Support fractional seconds in the named_timezones extension (jeremyevans) (#1943)

* Cache reflection datasets in the postgres adapter to improve performance (jeremyevans)

* Handle BC dates and timestamps in bound variables when using the pg_extended_date_support extension (jeremyevans)

* Correctly format hstore[] types in bound variables on PostgreSQL (jeremyevans)

* Fix corner case in eager loading where window function eager limit strategy is used, but row number entry is not removed (jeremyevans)

* Support server/shard specific :after_connect and :connect_sqls Database options (jeremyevans) (#1935)

=== 5.61.0 (2022-10-01)

* Make Database#foreign_key_list on PostgreSQL return results for partitioned tables (jeremyevans)

* Add Database#check_string_typecast_bytesize for checking bytesize of strings before typecasting (jeremyevans)

* Treat negative hexidecimal strings similar to positive hexidecimal strings when typecasting to integer (jeremyevans)

* Remove is_json and is_not_json methods from the pg_json_ops extension, as the support was removed in PostgreSQL 15 beta 4 (jeremyevans)

* Fix handling of timestamps before the date of calendar reform when using pg_extended_date_support extension on Ruby 3.2 (jeremyevans)

=== 5.60.1 (2022-09-02)

* Revert conversion of respond_to? to defined?, as it breaks with unused refinements on Ruby 2 (jeremyevans) (#1919)

=== 5.60.0 (2022-09-01)
