@@ -455,6 +455,10 @@
 <span class="ul__span">Allows Sequel::Model classes to implement PostgreSQL row-valued/composite types.</span>
 </li>
 <li class="ul__li ul__li--grid">
+<a class="a" href="rdoc-plugins/classes/Sequel/Plugins/RequireValidSchema.html">primary_key_lookup_check_values </a>
+<span class="ul__span">Typecasts and checks values in allowed range during lookups by primary key.</span>
+</li>
+<li class="ul__li ul__li--grid">
 <a class="a" href="rdoc-plugins/classes/Sequel/Plugins/RequireValidSchema.html">require_valid_schema </a>
 <span class="ul__span">Requires that model classes selecting from simple tables have valid schema.</span>
 </li>
