@@ -1,5 +1,7 @@
 === master
 
+* Add primary_key_lookup_check_values plugin for typecasting and checking primary key values during lookup (jeremyevans)
+
 * Setup validation of minimum and maximum values for integer columns in auto_validations (jeremyevans)
 
 * Add validates_max_value and validates_min_value to validation_helpers (jeremyevans)
